--- a/레이아웃.html
+++ b/레이아웃.html
@@ -74,11 +74,11 @@
       </ul>
     </nav>
     <main>
-      <aside><img src="/upload/image/IMG_8931s.jpg"></aside>
+      <aside><img src="image/IMG_8931s.jpg"></aside>
       <section>
         <h3>게시판</h3><hr>
       </section>
-      <aside><img src="/upload/image/IMG_8931s.jpg"></aside>
+      <aside><img src="image/IMG_8931s.jpg"></aside>
     </main>
     <footer></footer>
   </div>
